Interval And Times

--- a/src/app/includes/observable/list/list.component.html
+++ b/src/app/includes/observable/list/list.component.html
@@ -4,7 +4,7 @@
         <li routerLink="fromEvent" id="a">FromEvent1</li>
     </div>
     <div class="col-md-3" style="margin-left: -160px;">
-        <li routerLink="fromEvent" id="a">FromEvent1</li>
+        <li routerLink="interval" id="a">Interval</li>
     </div>
     <div class="col-md-3" style="margin-left: -160px;">
         <li routerLink="fromEvent" id="a">FromEvent1</li>
