--- a/src/app/includes/observable/list/list.component.html
+++ b/src/app/includes/observable/list/list.component.html
@@ -7,6 +7,6 @@
         <li routerLink="interval" id="a">Interval</li>
     </div>
     <div class="col-md-3" style="margin-left: -160px;">
-        <li routerLink="fromEvent" id="a">FromEvent1</li>
+        <li routerLink="of-from" id="a">Of & From</li>
     </div>
 </div>
