till tab operator

--- a/src/app/includes/observable/list/list.component.html
+++ b/src/app/includes/observable/list/list.component.html
@@ -9,4 +9,21 @@
     <div class="col-md-3" style="margin-left: -160px;">
         <li routerLink="of-from" id="a">Of & From</li>
     </div>
+    <div class="col-md-3" style="margin-left: -160px;">
+        <li routerLink="custom" id="a">Custom Oberevable</li>
+    </div>
+    <div class="col-md-3" style="margin-left: -160px;">
+        <li routerLink="map" id="a">Map</li>
+    </div>
+    <div class="col-md-3" style="margin-left: -160px;">
+        <li routerLink="pluck" id="a">Pluck</li>
+    </div>
+</div>
+<div class="row" id="srow">
+    <div class="col-md-3" style="margin-left: -160px;">
+        <li routerLink="filter" id="a">Filter</li>
+    </div>
+    <div class="col-md-3" style="margin-left: -160px;">
+        <li routerLink="tab" id="a">Tab</li>
+    </div>
 </div>
